// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a TextAreaField with the rest of the props 1`] = `
<Field
  error="Name is required"
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="The name given to you at birth."
  hideRequired={false}
  htmlFor="description"
  isInline={true}
  isInvalid={false}
  label="Profile Description"
  labelAttrs={Object {}}
  required={true}
  showOptional={false}
>
  <Textarea
    autoFocus={false}
    cols={null}
    id="description"
    maxLength={15}
    minLength={5}
    name="profile_description"
    required={true}
    rows={null}
  />
</Field>
`;

exports[`should render a default TextAreaField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  isInline={false}
  isInvalid={false}
  label={null}
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Textarea
    cols={null}
    maxLength={null}
    minLength={null}
    name={null}
    required={false}
    rows={null}
  />
</Field>
`;

exports[`should render as controlled when just a default value is passed into the TextareaField 1`] = `
<TextareaField
  cols={null}
  error={null}
  help={null}
  inputAttrs={Object {}}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  maxLength={null}
  minLength={null}
  name={null}
  onChange={[Function]}
  required={false}
  rows={null}
  value="foo"
>
  <Field
    error={null}
    errorIcon={
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    help={null}
    hideRequired={false}
    isInline={false}
    isInvalid={false}
    label={null}
    labelAttrs={Object {}}
    required={false}
    showOptional={false}
  >
    <div
      className="field"
    >
      <Textarea
        cols={null}
        maxLength={null}
        minLength={null}
        name={null}
        onChange={[Function]}
        required={false}
        rows={null}
        value="foo"
      >
        <textarea
          className="textarea"
          cols={null}
          maxLength={null}
          minLength={null}
          name={null}
          onChange={[Function]}
          required={false}
          rows={null}
          value="foo"
        />
      </Textarea>
    </div>
  </Field>
</TextareaField>
`;

exports[`should render as uncontrolled when just a default value is passed into the TextareaField 1`] = `
<TextareaField
  cols={null}
  defaultValue="foo"
  error={null}
  help={null}
  inputAttrs={Object {}}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  maxLength={null}
  minLength={null}
  name={null}
  required={false}
  rows={null}
>
  <Field
    error={null}
    errorIcon={
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    help={null}
    hideRequired={false}
    isInline={false}
    isInvalid={false}
    label={null}
    labelAttrs={Object {}}
    required={false}
    showOptional={false}
  >
    <div
      className="field"
    >
      <Textarea
        cols={null}
        defaultValue="foo"
        maxLength={null}
        minLength={null}
        name={null}
        required={false}
        rows={null}
      >
        <textarea
          className="textarea"
          cols={null}
          defaultValue="foo"
          maxLength={null}
          minLength={null}
          name={null}
          required={false}
          rows={null}
        />
      </Textarea>
    </div>
  </Field>
</TextareaField>
`;
